--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@hello-pangea/dnd": "^18.0.1",
     "next": "16.0.10",
     "react": "19.2.1",
+    "react-custom-roulette": "^1.4.1",
     "react-dom": "19.2.1",
     "socket.io-client": "^4.8.1"
   },
