--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hello-pangea/dnd": "^18.0.1",
     "next": "16.0.10",
+    "qrcode.react": "^4.2.0",
     "react": "19.2.1",
     "react-custom-roulette": "^1.4.1",
     "react-dom": "19.2.1",
