--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "next": "16.0.10",
     "qrcode.react": "^4.2.0",
     "react": "19.2.1",
+    "react-color-palette": "^7.3.1",
     "react-custom-roulette": "^1.4.1",
     "react-dom": "19.2.1",
     "socket.io-client": "^4.8.1"
